# tasktags

./: .gitignore  .stylish-haskell.yaml  ChangeLog.md  FileTimeEntry.hs  FileTimeEntryParams.hs  InlineParser.hs  InlineParserTest.hs  KeepTimeTagParser.hs  KeepTimeTagParserTest.hs  MarkdownReport.hs  MarkdownReportTest.hs  PandocParser.hs  PandocParserTest.hs  PandocStream.hs  PandocStreamTest.hs  README.md  TaskTagsConfig.hs  TaskTagsConfigTest.hs  TimeTag.hs  TimeTagParser.hs  TimeTagParserTest.hs  TogglAPI.hs  TogglReportsAPI.hs  ZonedTime.hs  install.sh  keepToMd.hs  package.yaml  stack.yaml  stream.el  task-tags-mode.el  task-tags.el  tasktags.cabal  tasktags.hs  tasktags.md  todo.md  togglCsv.hs  togglSubmit.hs
app/: keepToMd.hs  togglCsv.hs  togglSubmit.hs
src/: FileTimeEntry.hs  KeepTimeTagParser.hs  MarkdownReport.hs  PandocParser.hs  PandocStream.hs  TaskTagsConfig.hs  TimeTag.hs  TimeTagParser.hs  TogglAPI.hs  TogglReportsAPI.hs  TrimString.hs
test/: .tasktags  20200315_bug.md  KeepTimeTagParserTest.hs  MarkdownReportTest.hs  PandocParserTest.hs  PandocStreamTest.hs  Spec.hs  TaskTagsConfigTest.hs  TimeTagParserTest.hs  keep.md  keep.txt  run-tests.sh  stream-test.el  task-tags-test.el  test.md  test_time_cases.md  test_two_stops.md  toggl.csv
