name:                tasktags
version:             0.1
synopsis:            Text based task and time management
author:              Ilya Silvestrov
maintainer:          tellary@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable togglCsv
  main-is:             togglCsv.hs
  other-modules:       PandocParser, PandocStream, TaskTagsConfig,
                       TimeTagParser, TimeTag
  other-extensions:    FlexibleInstances, MultiParamTypeClasses, FlexibleContexts
  build-depends:       base >=4.10 && <4.12, ini >=0.4 && <0.5, pandoc >=2.2 && <2.8, parsec >=3.1 && <3.2, text >=1.2 && <1.3, bytestring >=0.10 && <0.11, email-validate >=2.3 && <2.4, directory >=1.3 && <1.4, split >=0.2 && <0.3, time >=1.8 && <1.9, containers >=0.5 && <0.6, optparse-applicative >= 0.14
  default-language:    Haskell2010
  ghc-options:         -dynamic

executable keepToMd
  main-is:             keepToMd.hs
  other-modules:       KeepTimeTagParser, MarkdownReport, TimeTag
  other-extensions:    FlexibleContexts
  build-depends:       base >=4.10 && <4.12, parsec >=3.1 && <3.2, text >=1.2 && <1.3, time >=1.8 && <1.9, optparse-applicative >= 0.14
  default-language:    Haskell2010
  ghc-options:         -dynamic

executable togglSubmit
  main-is:             togglSubmit.hs
  other-modules:       PandocParser, PandocStream, TaskTagsConfig,
                       TimeTagParser, TimeTag,
                       TogglAPI, TogglReportsAPI, FileTimeEntry
  other-extensions:    FlexibleInstances, MultiParamTypeClasses, FlexibleContexts
  build-depends:       base >=4.10 && <4.12, ini >=0.4 && <0.5, pandoc >=2.2 && <2.8, parsec >=3.1 && <3.2, text >=1.2 && <1.3, bytestring >=0.10 && <0.11, email-validate >=2.3 && <2.4, directory >=1.3 && <1.4, split >=0.2 && <0.3, time >=1.8 && <1.9, containers >=0.5 && <0.6, optparse-applicative >= 0.14
  default-language:    Haskell2010
  ghc-options:         -dynamic
